Removed participant endpoint and model (ParticipantApi.java)
