# src/main/java/io/swagger/api/ParticipantApi.java
@@ -1,51 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (3.0.24).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package io.swagger.api;
-
-import io.swagger.model.ApiError;
-import io.swagger.model.Survey;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.enums.ParameterIn;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.media.ArraySchema;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.bind.annotation.CookieValue;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-import java.util.Map;
-
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2021-02-28T16:38:44.030Z[GMT]")
-public interface ParticipantApi {
-
-    @Operation(summary = "Return all surveys for the logged in user", description = "All surveys for the corresponding user are returned", security = {
-        @SecurityRequirement(name = "ApiKeyAuth")    }, tags={ "submission" })
-    @ApiResponses(value = { 
-        @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(array = @ArraySchema(schema = @Schema(implementation = Survey.class)))),
-        
-        @ApiResponse(responseCode = "200", description = "unexpected error", content = @Content(schema = @Schema(implementation = ApiError.class))) })
-    @RequestMapping(value = "/participant/{id}/surveys",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    ResponseEntity<List<Survey>> getParticipantsSurveys(@Parameter(in = ParameterIn.PATH, description = "id of participant to fetch surveys from", required=true, schema=@Schema()) @PathVariable("id") Long id);
-
-}
-
